# satif16

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  data.txt  data2.txt
cpp2/: CMakeLists.txt  attenuation.cpp  build.sh
cpp2a/: CMakeLists.txt  attenuation.cpp  attenuation.py
cpp2b/: CMakeLists.txt  attenuation.cpp  attenuation.hpp  attenuation2.cpp  attenuation2.hpp  attenuation2_issue2.py  attenuation_base.py  attenuation_issue1.py  attenuation_issue2.py  bindings.cpp  build.sh  cpp2b_pybase.out  cpp2b_pyissue1.out  cpp2b_pyissue2.out  data2.txt
cpp2c/: CMakeLists.txt  attenuation.cpp  attenuation.hpp  attenuation_base.py  attenuation_module.py  attenuation_workaround.py  bindings.cpp  data.txt
cpp3/: CMakeLists.txt  attenuation.cpp  attenuation.hpp  attenuation3.cpp  attenuation3.hpp  attenuation3_base.py  attenuation3_fromfile.py  attenuation_base.py  attenuation_fromfile.py  attenuation_noissue.py  bindings.cpp  build.sh  cpp3.out
fortran1/: CMakeLists.txt  attenuation.f90  build.sh  fortran1.out
fortran2/: CMakeLists.txt  attenuation.f90  attenuation2.f90  build.sh
python/: attenuation.py  python.out
tests/: cpp3.out  cpp3_pybase.out  cpp3_pyfromfile.out  cpp3_pynoissue.out  data.txt  data2.txt
